# projeto_agenda

./: .env.example  .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  health.py  router.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  deps.py  rls.py  session.py
backend/app/middleware/: __init__.py  tenant.py
backend/app/modules/: __init__.py
backend/app/modules/agendamentos/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/modules/anonimizacao/: __init__.py  automaton.py  dependencies.py  exceptions.py  guardrail.py  models.py  nlp.py  pseudonimizador.py  recognizers.py  router.py  schemas.py  service.py  sources.py
backend/app/modules/audit/: __init__.py  models.py  router.py  schemas.py  service.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_tenancy_foundation.py  0002_usuarios.py  0003_dominio_consentimento.py  0004_agendamentos.py  0005_evolucoes_rag.py  0006_grant_update_usuarios.py  0007_evolucao_agendamento_e_delete.py  0008_agendamento_serie.py  0009_paciente_arquivamento.py  0010_documentos_paciente.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_agendamentos.py  test_auth_api.py  test_documentos_rls.py  test_evolucoes.py  test_fase3_dominio.py  test_rls_isolation.py
backend/tests/unit/: test_agendamento_schema.py  test_agendamento_transicoes.py  test_anonimizacao.py  test_auth_cookie.py  test_cli.py  test_dashboard_limites.py  test_dashboard_sessoes.py  test_documentos_seguranca.py  test_evolucoes_chunking.py  test_llm.py  test_paciente_arquivamento.py  test_paciente_invariante.py  test_perfil_schema.py  test_recorrencia.py  test_responsavel_maioridade.py  test_security.py
(+114 files in other folders)
