[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agenda-backend"
version = "0.1.0"
description = "Backend FastAPI — gestão de agendamentos e prontuários (TEA)"
requires-python = ">=3.12"

# Dependencias de base (Fase 0/2). Bibliotecas pesadas de anonimizacao
# (Presidio, spaCy) NAO entram aqui: serao importadas lazy, dentro das funcoes
# que as usam (§1.3), e adicionadas no grupo apropriado na Fase 4.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",   # inclui uvloop + httptools (§1.3)
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",      # driver PostgreSQL
    "alembic>=1.13",             # migrations (Fase 1)
    "pydantic[email]>=2.7",      # inclui email-validator (EmailStr)
    "pydantic-settings>=2.3",    # Settings via env (§4.1)
    "pyjwt>=2.8",                # JWT (§2.1/§4.1)
    "bcrypt>=4.1",               # hash de senha (uso direto; passlib incompat.)
    "python-multipart>=0.0.9",   # form data (login)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",               # TestClient / chamadas
    "ruff>=0.5",
    "mypy>=1.10",
]

# Camada NER da pseudonimizacao (Fase 4, §2.3). Bibliotecas PESADAS, importadas
# lazy (§1.3) e instaladas so onde o NER roda. Modelo spaCy PEQUENO para caber
# no mem_limit de 1 GB do backend (§1.1). Instalar com:
#   pip install .[nlp] && python -m spacy download pt_core_news_sm
nlp = [
    "presidio-analyzer>=2.2",   # so o Analyzer; a substituicao/desanon. e nossa
    "spacy>=3.7,<3.9",
]

[tool.setuptools.packages.find]
include = ["app*"]               # nao empacotar tests/ nem migrations/

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
